sqldeploy.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sql-deploy 
spec:
  replicas: 3
  serviceName: mariadb
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: sql-app
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: sql-app
    spec:
      containers:
        - name: sql-cont 
          image: mysql:8.0
          ports:
            - containerPort: 3306
          resources:
            requests:
              cpu: "100m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
          volumeMounts:
            - name: sql-volume 
              mountPath: /var/lib/mysql
            - name: init-script
              mountPath: /docker-entrypoint-initdb.d/init.sql
              subPath: init.sql
      terminationGracePeriodSeconds: 10
      volumeClaimTemplates:
        - metadata:
            name: sql-volume
          spec:
            accessModes: 
              - ReadWriteMany
            storageClassName: nfs-duni-sc
            resources:
              requests:
                storage: 1Gi
      volumes:
        - name: init-script
          configMap:
            name: init-config
---
apiVersion: v1
kind: Service
metadata: 
  name: mariadb
spec:
  clusterIP: None
  selector:
    app: sql-app
  ports:
    - port: 3306
      targetPort: 3306
